--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,12 @@ mock
 # ----------------------
 gevent
 gunicorn
+
+
+# ----------------------
+# Tools
+# ----------------------
+-e git://github.com/pythonforfacebook/facebook-sdk.git#egg=facebook-sdk
+itsdangerous==0.24
+psycopg2==2.6
+numpy
